syntax = "proto3";

package celestia.node.v1.common;

option go_package = "github.com/celestiaorg/celestia-node/api/v1/common";

// Common status codes used across all services
enum StatusCode {
  // Reserve 0 for unspecified
  STATUS_UNSPECIFIED = 0;
  // Success codes (1-99)
  STATUS_OK = 1;
  // Error codes (100+)
  // ERROR_DATA_NOT_AVAILABLE is returned if data availability sampling gurantees was required for request
  // and failed. Keep in mind that data availability sampling will be ensured for all blocks in
  // sampling window till the requested height
  ERROR_DATA_NOT_AVAILABLE = 100;
  // Fraud was detected in the chain before requested block
  ERROR_FRAUD_DETECTED = 101;
  ERROR_TIMEOUT = 102;
  // invalid input was submit as part of request. More information is provided in Status message field.
  ERROR_INVALID_REQUEST = 103;
  // unexpected error happened during handling the request
  ERROR_INTERNAL = 104;
  // method is not implemented by the server
  ERROR_NOT_IMPLEMENTED = 105;
}

// Common message types used across services
message Status {
  StatusCode code = 1;
  string message = 2;
}

message Options {
  // if verify_available is enabled, node will additionally ensure
  // data availability on top of fetching requiested data
  bool verify_available = 1;
  // when proofs_only is enabled, proofs will be returned without sending data.
  bool proofs_only = 2;
}